Changed drag handling in workspace to use multiple divs to fix Cypress issues with html elements not being visible

--- a/src/components/document/document-workspace.sass
+++ b/src/components/document/document-workspace.sass
@@ -1,11 +1,13 @@
 @import ../../components/vars
 
 .document-workspace
-  position: absolute
-  top: 0
-  left: 0
-  right: 0
-  bottom: 0
+
+  .drag-handler
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
 
   .single-workspace
     position: absolute
